# bluepill-cmsis

./: .gitmodules  CMakeLists.txt  README.md  stm32f103c8.ld
bitloom_hal/src/i2c/: CMakeLists.txt  i2c.c
bitloom_hal/src/pin_digital_io/: CMakeLists.txt  pin_digital_io.c
bitloom_hal/src/timer/: CMakeLists.txt  timer.c
bitloom_hal/src/uart_hal/: CMakeLists.txt  uart_hal.c
cmake/: arm-none-eabi.cmake
openocd/: stm32f103c8_blue_pill.cfg
src/: main.c
